<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.dtwal.expenses.AddExpenseActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginTop="16dp"
        android:text="TextView"
        android:textSize="16dp"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/AddExpense" />

    <EditText
        android:id="@+id/expenseNameEdit"
        android:layout_width="0dp"
        android:layout_height="38dp"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="31dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="19dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/ExpenseName"
        app:layout_constraintStart_toStartOf="@+id/expenseNameEdit"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:text="@string/ExpenseName" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginStart="1dp"
        android:text="@string/Category"
        app:layout_constraintBottom_toTopOf="@+id/spinner"
        app:layout_constraintStart_toStartOf="@+id/spinner"
        tools:text="@string/Category" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="0dp"
        android:layout_height="43dp"
        android:layout_marginBottom="121dp"
        android:layout_marginEnd="33dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="122dp"
        android:entries="@string/Category"
        app:layout_constraintBottom_toBottomOf="@+id/amountEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:text="Amount"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/addExpenseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="92dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="93dp"
        android:text="@string/AddExpenseButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/amountEdit"
        tools:text="@string/AddExpenseButton" />

    <Button
        android:id="@+id/cancelExpenseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="33dp"
        android:text="@string/CancelButton"
        app:layout_constraintBottom_toBottomOf="@+id/addExpenseButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/addExpenseButton"
        tools:text="@string/CancelButton" />

    <EditText
        android:id="@+id/amountEdit"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginEnd="38dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="13dp"
        android:ems="10"
        android:inputType="textPersonName|number|numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />
</android.support.constraint.ConstraintLayout>
